# juemi003

./: .dockerignore  .env.example  .gitignore  .python-version  AGENTS.md  CLAUDE.md  LICENSE  README.md  config.py  deploy.sh  docker-compose.yml  hy3d_deps.txt  pyproject.toml  requirements-worker.txt  requirements.txt  ruff.toml  security.py  serve.py
.agent/: decisions.md  friction-log.md  session-handoff.md
.ai/: architecture-audit-2026-05.md  decisions.md  friction-log.md  pending.md  session-handoff.md  snapshot.md  vram-management-design.md
.claude/: README.md  impact-map.md  pending.md  troubleshooting.md
api/: schemas.py  server.py
artifact/: manifest.py  object_client.py  store.py  utils.py
auth/: helpers.py
core/: pagination.py
cubie/: serve.py
design/: DESIGN-dark.md  DESIGN-light.md  admin-dark.html  admin-light.html  user-dark.html  user-light.html
docker/: Dockerfile
docs/: PLAN.bak.md  PLAN.md  vram-management.md
engine/: async_engine.py  async_engine_eta.py  async_engine_events.py  async_engine_webhook.py  model_registry.py  model_scheduler.py  model_worker.py  pipeline.py  sequence.py  vram_allocator.py  vram_probe.py  weight_manager.py
model/: base.py  registry.py  runtime.py  scheduler.py  weight.py  worker.py
observability/: metrics.py
plan/: 2026-03-10-phase-a-architecture.md  2026-03-11-phase-b-artifact-backends.md  2026-03-11-pyenv-workflow.md  2026-03-11-trellis2-docker-install-fix.md  2026-03-12-flashattn-docker-layout.md  2026-03-13-gen3d-image-on-flashattn-base.md  2026-03-14-doc-state-sync.md  (+68 more)
scripts/: bench.py  (+5 more)
(+739 files in other folders)
