[project]
name = "cubie"
version = "0.1.0"
requires-python = "==3.12.7"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "aiosqlite>=0.20,<1.0",
    "pydantic-settings>=2.6,<3.0",
    "httpx>=0.27,<1.0",
    "Pillow>=10.4,<12.0",
    "aiofiles>=24.1,<25.0",
    "boto3>=1.36,<2.0",
    "trimesh>=4.6,<5.0",
    "pyrender>=0.1.45,<0.2",
    "prometheus-client>=0.21,<1.0",
    "structlog>=24.4,<26.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "ruff>=0.11,<1.0",
]
worker = [
    "huggingface_hub>=0.28,<1.0",
    "safetensors>=0.5,<1.0",
]

[tool.ruff]
exclude = [
    ".venv",
    "Hunyuan3D-2",
    "model/trellis2/ext/o-voxel",
    "model/step1x3d/ext/custom_rasterizer",
    "model/step1x3d/ext/differentiable_renderer",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C90"]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 10
